--- a/clanmanager/templates/index.html
+++ b/clanmanager/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clash of Clans Clan Manager</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ clan['badge'] }}">
 </head>
 <body>
     <div class="panel">
@@ -30,7 +31,7 @@
         </div>
         <div class="panel-footer">
             <a class="link" href="{{ clan['share_link'] }}" target="_blank">
-                <img src="{{ url_for('static', filename='images/shield.svg') }}" alt="Clan Profile" class="panel-footer-link"/>
+                <img title="Open in Clash of Clans" src="{{ url_for('static', filename='images/shield.svg') }}" alt="Clan Profile" class="panel-footer-link"/>
             </a>
         </div>
     </div>
@@ -57,10 +58,10 @@
         </div>
         <div class="panel-footer">
             <a class="link" href="{{ member['share_link'] }}" target="_blank">
-                <img src="{{ url_for('static', filename='images/shield.svg') }}" alt="COC Profile" class="panel-footer-link"/>
+                <img title="Open in Clash of Clans" src="{{ url_for('static', filename='images/shield.svg') }}" alt="COC Profile" class="panel-footer-link"/>
             </a>
             <a class="link" href="{{ member['member_link'] }}" target="_blank">
-                <img src="{{ url_for('static', filename='images/profile.svg') }}" alt="Member Profile" class="panel-footer-link"/>
+                <img title="Open statistics profile" src="{{ url_for('static', filename='images/profile.svg') }}" alt="Member Profile" class="panel-footer-link"/>
             </a>
         </div>
     </div>
