--- a/clanmanager/templates/index.html
+++ b/clanmanager/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="{{ clan['badge'] }}">
 </head>
 <body>
-    <div class="panel">
+    <div class="panel nohover">
         <div class="panel-info">
             <div class="header">
                 <div class="badge-wrapper">
