--- a/clanmanager/templates/member.html
+++ b/clanmanager/templates/member.html
@@ -54,6 +54,9 @@
             },
         };
         var layout = {
+            title: {
+                text: '{{ data.yaxis }} vs. Datetime'
+            },
             xaxis: {
                 title: 'Datetime',
                 type: 'date'
